<?xml version="1.0"?>
<project
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>health.medunited</groupId>
    <artifactId>logsearch</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <groupId>health.medunited</groupId>
  <artifactId>logsearch-frontend</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <failOnMissingWebXml>false</failOnMissingWebXml>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>openui5</artifactId>
      <version>1.115.0</version>
    </dependency>
  </dependencies>
  <build>
    <finalName>logsearch-frontend</finalName>
    <plugins>
      <plugin>
        <groupId>org.wildfly.plugins</groupId>
        <artifactId>wildfly-maven-plugin</artifactId>
        <version>4.0.0.Final</version>
        <configuration>
          <fork>true</fork>
          <feature-pack-location>
            wildfly@maven(org.jboss.universe:community-universe):current/beta#26.1.3.Final
          </feature-pack-location>
          <serverConfig>../../../../wildfly-configuration/standalone.xml</serverConfig>
          <!--
             <command>/extension=org.wildfly.extension.microprofile.metrics-smallrye:add</command>
          -->
          <java-opts>
            <java-opt>--add-opens=java.base/java.lang=ALL-UNNAMED</java-opt>
            <java-opt>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</java-opt>
            <java-opt>--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.io=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.security=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.util=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.management/javax.management=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.naming/javax.naming=ALL-UNNAMED</java-opt>
            <java-opt>-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n</java-opt>
          </java-opts>
          <server-args>
            <server-arg>-Djboss.https.port=8444</server-arg>
          </server-args>
          <add-user>
            <users>
              <user>
                <username>admin</username>
                <password>admin</password>
              </user>
            </users>
          </add-user>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
